# bee_varroa

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.cpp  bee_detector.cpp  bee_detector.h  camera.cpp  camera.h  camera_pins.h  esp32s3_128_128_varroa.espdl  esp32s3_416_416_bee.espdl  microsd.cpp  microsd.h  sdmmc_pins_and_width.h  varroa_detector.cpp  varroa_detector.h
